# livekit-poc

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: docs.md
scripts/: run.sh
src/: base.py  main.py  metrics.py  prompts.py  sessions.py
